# osm-static-map-generator

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  ROADMAP.md
.claude/: settings.local.json
.github/workflows/: build.yml
cpp/: CMakeLists.txt  Dockerfile.wasm  README.md  build-wasm-docker.sh  image.cpp  image.h  main.cpp  mapgenerator.cpp  mapgenerator.h  shared.cpp  shared.h  tilecache.cpp  tilecache.h  tiledownloader.cpp  tiledownloader.h  vcpkg.json
